docs: trying to get that darn header to be the correct font
Might need to learn to pick my battles, but dangit I'm stubborn.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </header>
 
     <main>
-        <section id="introduction">
-            <h2>
+        <section>
+            <h2 id="acnr">
                 A Calgary Friday Night Ritual
             </h2>
             <p>
